--- a/xuecheng-plus-system/xuecheng-plus-system-api/pom.xml
+++ b/xuecheng-plus-system/xuecheng-plus-system-api/pom.xml
@@ -22,7 +22,11 @@
             <artifactId>xuecheng-plus-system-service</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
-
+        <!--服务发现中心-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
         <!--cloud的基础环境包-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
