--- a/xuecheng-plus-media/xuecheng-plus-media-service/pom.xml
+++ b/xuecheng-plus-media/xuecheng-plus-media-service/pom.xml
@@ -21,6 +21,17 @@
             <artifactId>xuecheng-plus-media-model</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <!-- minio -->
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>8.4.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.8.1</version>
+        </dependency>
 
         <!-- MySQL 驱动 -->
         <dependency>
