--- a/xuecheng-plus-media/xuecheng-plus-media-service/pom.xml
+++ b/xuecheng-plus-media/xuecheng-plus-media-service/pom.xml
@@ -78,6 +78,10 @@
             <artifactId>okhttp</artifactId>
             <version>4.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
 
     </dependencies>
 
