--- a/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
@@ -23,12 +23,22 @@
            <artifactId>xuecheng-plus-content-model</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
+       <dependency>
+           <groupId>com.xuecheng</groupId>
+           <artifactId>xuecheng-plus-message-sdk</artifactId>
+           <version>0.0.1-SNAPSHOT</version>
+       </dependency>
 
        <!-- MySQL 驱动 -->
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <scope>runtime</scope>
+       </dependency>
+
+       <dependency>
+           <groupId>com.xuxueli</groupId>
+           <artifactId>xxl-job-core</artifactId>
        </dependency>
 
        <!-- mybatis plus的依赖 -->
