--- a/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
+++ b/xuecheng-plus-content/xuecheng-plus-content-service/pom.xml
@@ -28,6 +28,30 @@
            <artifactId>xuecheng-plus-message-sdk</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
+       <dependency>
+           <groupId>com.alibaba.cloud</groupId>
+           <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+       </dependency>
+       <!-- Spring Cloud 微服务远程调用 -->
+       <dependency>
+           <groupId>org.springframework.cloud</groupId>
+           <artifactId>spring-cloud-starter-openfeign</artifactId>
+       </dependency>
+       <dependency>
+           <groupId>io.github.openfeign</groupId>
+           <artifactId>feign-httpclient</artifactId>
+       </dependency>
+       <!--feign支持Multipart格式传参-->
+       <dependency>
+           <groupId>io.github.openfeign.form</groupId>
+           <artifactId>feign-form</artifactId>
+           <version>3.8.0</version>
+       </dependency>
+       <dependency>
+           <groupId>io.github.openfeign.form</groupId>
+           <artifactId>feign-form-spring</artifactId>
+           <version>3.8.0</version>
+       </dependency>
 
        <!-- MySQL 驱动 -->
        <dependency>
@@ -39,6 +63,11 @@
        <dependency>
            <groupId>com.xuxueli</groupId>
            <artifactId>xxl-job-core</artifactId>
+       </dependency>
+        <!--       springframework依赖-->
+       <dependency>
+           <groupId>org.springframework.boot</groupId>
+           <artifactId>spring-boot-starter-freemarker</artifactId>
        </dependency>
 
        <!-- mybatis plus的依赖 -->
